<resources>
    <string name="app_name">Surakat</string>

    <string name="button_change_image">Change image</string>
    <string name="button_change_status">Change status</string>
    <string name="button_sign_in">Sign in</string>
    <string name="button_send">Send</string>
    <string name="button_create">Create</string>
    <string name="button_set">Set</string>
    <string name="button_back">Back</string>

    <string name="error_accept_friend_request">Accept friend request problem occurred</string>
    <string name="error_account">You need to setup your account</string>
    <string name="error_decline_friend_request">Decline friend request problem occurred</string>
    <string name="error_empty_field">Field(s) is(are) empty</string>
    <string name="error_cancel_sent_friend_request">Cancel sent friend request problem occurred</string>
    <string name="error_create_an_account">Create an account problem occurred</string>
    <string name="error_receive_friend_request">Receive friend request problem occurred</string>
    <string name="error_save_changes">There was an error in saving changes</string>
    <string name="error_send_message">Send message problem occurred</string>
    <string name="error_send_notification">Send notification problem occurred</string>
    <string name="error_send_friend_request">Send friend request problem occurred</string>
    <string name="error_set_account_data">Set account data problem occurred</string>
    <string name="error_sign_in">Sign In Problem</string>
    <string name="error_unfriend_request">Unfriend request problem occurred</string>

    <string name="hint_email">Type Email...</string>
    <string name="hint_name">Type Name...</string>
    <string name="hint_password">Type Password...</string>
    <string name="hint_status">Type Status...</string>
    <string name="hint_type_message">Type a message...</string>

    <string name="message_creating_account">Creating account...</string>
    <string name="message_create_account_wait">Please wait while we create your account</string>
    <string name="message_saving_changes">Please wait while we save the changes</string>
    <string name="message_setting_account">Filling account</string>
    <string name="message_setting_account_wait">Please wait while we fill account</string>
    <string name="message_checking_sign_in">Checking sign in...</string>
    <string name="message_check_account_wait">Please wait while we check your credentials</string>
    <string name="message_loading_profile_data">Loading profile data...</string>
    <string name="message_loading_profile_data_wait">Please wait while we load the profile data</string>
    <string name="message_uploading_image">Uploading image...</string>
    <string name="message_uploading_image_wait">Please wait while we upload and process the image</string>

    <string name="success_saving_changes">Changes successfully saved</string>

    <string name="text_accept_friend_request">Accept friend request</string>
    <string name="text_all_users">All users</string>
    <string name="text_create_an_account">Create an account</string>
    <string name="text_cancel_friend_request">Cancel friend request</string>
    <string name="text_chat">Chat</string>
    <string name="text_days_ago">days ago</string>
    <string name="text_decline_friend_request">Decline friend request</string>
    <string name="text_fill_account">Fill account</string>
    <string name="text_hello_user">Let\'s chat</string>
    <string name="text_hour_ago">an hour ago</string>
    <string name="text_hours_ago">hours ago</string>
    <string name="text_just_now">just now</string>
    <string name="text_left_characters_head">Left</string>
    <string name="text_left_characters_tail">symbols</string>
    <string name="text_logout_confirm">Do you want to exit?</string>
    <string name="text_logout_header">Logging out</string>
    <string name="text_message">Message</string>
    <string name="text_message_author_name">Message author name</string>
    <string name="text_minute_ago">a minute ago</string>
    <string name="text_minutes_ago">minutes ago</string>
    <string name="text_no">No</string>
    <string name="text_now">now</string>
    <string name="text_open_profile">Open profile</string>
    <string name="text_online">Online: </string>
    <string name="text_profile">Profile</string>
    <string name="text_saving_changes">Saving changes</string>
    <string name="text_select_image">Select image</string>
    <string name="text_select_options">Select options</string>
    <string name="text_send_friend_request">Send friend request</string>
    <string name="text_send_message">Send message</string>
    <string name="text_set_account">Set account</string>
    <string name="text_set_status">Set status</string>
    <string name="text_settings">Settings</string>
    <string name="text_sign_in">Sign In</string>
    <string name="text_status">Status</string>
    <string name="text_tabs_fragment">Choose a friend for chat</string>
    <string name="text_total_friends">Total friends:</string>
    <string name="text_unfriend_request">Unfriend request</string>
    <string name="text_user">User</string>
    <string name="text_user_name">User name</string>
    <string name="text_user_list">User list:</string>
    <string name="text_yes">Yes</string>
    <string name="text_yesterday">yesterday</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>

</resources>
