<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/signInContainer"
    android:orientation="vertical"
    style="@style/MM"
    android:gravity="center_horizontal"
    android:padding="@dimen/spacing_2x"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="@dimen/logo_size"
        android:layout_height="@dimen/logo_size"
        android:layout_marginTop="@dimen/spacing_4x"
        android:src="@drawable/hello_user"/>

    <TextView
        android:id="@+id/helloUserTextView"
        style="@style/MW"
        android:layout_marginTop="@dimen/spacing_2x"
        android:gravity="center"
        android:textSize="@dimen/text_size_2.5x"
        android:textColor="@color/white"
        android:text="@string/text_hello_user"/>

    <EditText
        android:id="@+id/emailEditText"
        style="@style/MW"
        android:layout_marginTop="@dimen/spacing_6x"
        android:padding="@dimen/spacing_3x"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/text_size_1.5x"
        android:textColorHint="@color/colorPrimary"
        android:hint="@string/hint_email"
        android:background="@drawable/input_background"/>

    <EditText
        android:id="@+id/passwordEditText"
        style="@style/MW"
        android:layout_marginTop="@dimen/spacing_2x"
        android:padding="@dimen/spacing_3x"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/text_size_1.5x"
        android:textColorHint="@color/colorPrimary"
        android:hint="@string/hint_password"
        android:background="@drawable/input_background"/>

    <Button
        android:id="@+id/signInButton"
        style="@style/MW"
        android:layout_marginTop="@dimen/spacing_2x"
        android:background="@drawable/button_green"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_1.5x"
        android:text="@string/button_sign_in"/>

    <Button
        android:id="@+id/registerButton"
        style="@style/MW"
        android:layout_marginTop="@dimen/spacing_2x"
        android:background="@drawable/button_yellow"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_1.5x"
        android:text="@string/text_create_an_account"/>

</LinearLayout>