<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/setAccountContainer"
    style="@style/MM"
    tools:context="com.shmeli.surakat.ui.SetAccountActivity"
    android:padding="@dimen/spacing_2x"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/setAccountTextView"
        style="@style/MW"
        android:layout_marginTop="@dimen/spacing_2x"
        android:gravity="center"
        android:textSize="@dimen/text_size_2.5x"
        android:textColor="@color/white"
        android:text="@string/text_set_account"/>

    <EditText
        android:id="@+id/setAccountNameEditText"
        style="@style/MW"
        android:layout_below="@+id/setAccountTextView"
        android:layout_marginTop="@dimen/spacing_6x"
        android:padding="@dimen/spacing_3x"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/text_size_1.5x"
        android:textColorHint="@color/colorPrimary"
        android:hint="@string/hint_name"
        android:background="@drawable/input_background"/>

    <Button
        android:id="@+id/setAccountButton"
        style="@style/MW"
        android:layout_below="@+id/setAccountNameEditText"
        android:layout_marginTop="@dimen/spacing_2x"
        android:background="@drawable/button_background"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_1.5x"
        android:text="@string/button_set"/>

</RelativeLayout>
