<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profileContainer"
    style="@style/MM"
    android:padding="@dimen/spacing_2x"
    android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
    android:background="@color/colorPrimary"
    tools:context="com.shmeli.surakat.ui.ProfileActivity">

    <include
        layout="@layout/app_bar"
        android:id="@+id/profilePageToolbar"/>

    <LinearLayout
        style="@style/MW"
        android:orientation="vertical"
        android:layout_below="@+id/profilePageToolbar">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profilePageAvatar"
            style="@style/WW"
            android:layout_width="@dimen/avatar_big_size"
            android:layout_height="@dimen/avatar_big_size"
            android:layout_marginTop="@dimen/spacing_4x"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/default_avatar"/>

        <TextView
            android:id="@+id/profilePageUserName"
            style="@style/MW"
            android:layout_below="@+id/profilePageAvatar"
            android:layout_marginTop="@dimen/spacing_2x"
            android:gravity="center"
            android:textSize="@dimen/text_size_2.5x"
            android:textColor="@color/white"
            android:hint="@string/hint_name"/>

        <TextView
            android:id="@+id/profilePageUserStatus"
            style="@style/MW"
            android:layout_below="@+id/profilePageUserName"
            android:layout_marginTop="@dimen/spacing_2x"
            android:gravity="center"
            android:textSize="@dimen/text_size_2.0x"
            android:textColor="@color/white"
            android:hint="@string/hint_status"/>

    </LinearLayout>

    <TextView
        android:id="@+id/profilePageFriendsCount"
        style="@style/MW"
        android:layout_above="@+id/profilePageSendRequest"
        android:layout_marginBottom="@dimen/spacing_2x"
        android:gravity="center"
        android:textSize="@dimen/text_size_2.0x"
        android:textColor="@color/white"
        android:text="@string/text_total_friends"/>

    <!--<Button-->
        <!--android:id="@+id/profilePageSendRequest"-->
        <!--style="@style/MW"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:background="@drawable/button_green"-->
        <!--android:textColor="@color/colorPrimary"-->
        <!--android:textSize="@dimen/text_size_1.5x"-->
        <!--android:text="@string/text_send_friend_request"/>-->

    <Button
        android:id="@+id/profilePageSendRequest"
        style="@style/MW"
        android:layout_above="@+id/profilePageDeclineRequest"
        android:layout_marginBottom="@dimen/spacing_2x"
        android:background="@drawable/button_green"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_1.5x"
        android:text="@string/text_send_friend_request"/>

    <Button
        android:id="@+id/profilePageDeclineRequest"
        style="@style/MW"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button_yellow"
        android:visibility="invisible"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_1.5x"
        android:text="@string/text_decline_friend_request"/>

</RelativeLayout>
