<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/chatContainer"
    android:orientation="vertical"
    style="@style/MM"
    android:padding="@dimen/spacing_2x"
    android:background="@color/colorPrimary">

    <EditText
        android:id="@+id/chatMessageText"
        style="@style/MW"
        android:inputType="textMultiLine"
        android:lines="3"
        android:maxLength="@integer/message_length"
        android:ems="10"
        android:gravity="top|left"
        android:padding="@dimen/spacing_1x"
        android:selectAllOnFocus="false"
        android:background="@drawable/input_outline"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_1.5x"
        android:textColorHint="@color/white"
        android:hint="@string/hint_type_message"/>

    <LinearLayout
        style="@style/MW"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/chatMessageLeftCharsHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_1.5x"
            android:textColor="@color/white"
            android:text="@string/text_left_characters_head"/>
        <TextView
            android:id="@+id/chatMessageLeftCharsBody"
            style="@style/WW"
            android:layout_marginLeft="@dimen/spacing_1x"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_1.5x"
            android:text="0"/>
        <TextView
            android:id="@+id/chatMessageLeftCharsTail"
            style="@style/WW"
            android:layout_marginLeft="@dimen/spacing_1x"
            android:textSize="@dimen/text_size_1.5x"
            android:textColor="@color/white"
            android:text="@string/text_left_characters_tail"/>

    </LinearLayout>

    <Button
        android:id="@+id/chatSendButton"
        style="@style/MW"
        android:layout_marginTop="@dimen/spacing_1x"
        android:background="@drawable/button_green"
        android:textSize="@dimen/text_size_1.5x"
        android:textColor="@color/colorPrimary"
        android:text="@string/button_send"/>

    <View
        android:id="@+id/chatTopDividerView"
        style="@style/HLine"
        android:layout_marginTop="@dimen/spacing_1x"
        android:background="@color/white"
        android:visibility="gone"/>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/chatSwipeRefreshLayout"
        style="@style/MM"
        android:layout_marginTop="@dimen/spacing_2x">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/chatMessagesList"
            style="@style/MM"/>

    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>
